# sbtar

./: .gitignore  Cargo.toml  LICENSE-THIRD-PARTY.md  README.md
src/: main.rs
testing/gentar/: absolute-path.tar.base64  go.mod  main.go  relative-path.tar.base64
