[package]
name = "sbtar"
description = """
sbtar enters a sandbox and extracts a tar from standard input
into a directory.

Please note that this project is experimental. I developed it
to learn about Rust and its foreign function interface. It is
not meant as a full `tar` replacement."""
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.33"
libc = "0.2.158"
pico-args = { version = "0.5.0", features= ["combined-flags"] }
tar = "0.4.41"
