[package]
name = "sbtar"
description = """
sbtar enters a sandbox and extracts a tar from standard input
into a directory.

Please note that this project is experimental. I developed it
to learn about Rust and its foreign function interface. It is
not meant as a full `tar` replacement."""
version = "0.0.1"
edition = "2021"

[dependencies]
argparse = { git = "https://github.com/stephen-fox/rust-argparse", branch = "rust-2021-edition", version = "0.2.2" }
flate2 = "1.0.33"
libc = "0.2.158"
tar = "0.4.41"
